# Predictable-Secure-Code-Generation

./: .gitignore  Dockerfile  ENVIRONMENT_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  ai.py  check_env.py  config.py  demo.py  env.template  function_app.py  handle_cli.py  install_dependencies.py  local.settings.json  pyproject.toml  quick_setup.py  requirements-dev.txt  requirements.txt  test_ai.py  test_ai_cli.py  test_basic.py  test_platform.py
CodeFromRequirements/: requirements_checker.py
ProjectBase/: implementedRequirements.csv  requirements.csv
draft code/: generateCodeFromReqCpp  generateCodeFromReqCs.py
draft code/CodeFromRequirements/: ai_code_editor.py  code_analyzer.py  code_validator.py  metadata_manager.py  setup_sample_data.py
examples/context/: python_context.json
examples/requirements/: sample_calculator.json
input/PythonExample/code/: CodeUtilsUpdate.java  code.py  pyproject.toml
input/PythonExample/code/calculator/: __init__.py
input/code/: README.md  code.py
input/enviroment/: requirements.csv
input/environment/: test_requirements.csv
output/: validation  validation.json
src/: test_metadata_generation.py  validate_python_code.py
src/HandleGeneric v2/: README.md  pyproject.toml
src/HandleGeneric v2/examples/requirements/: sample_requirements.json
src/HandleGeneric v2/ops/: Dockerfile  compose.yaml
src/HandleGeneric v2/src/platform/1_app/s1_codegen/: dto.py  pipeline.py  use_cases.py
src/HandleGeneric v2/src/platform/1_app/s2_metadata/: dto.py  pipeline.py  use_cases.py
src/HandleGeneric v2/src/platform/1_app/s3_validation/: dto.py  pipeline.py  use_cases.py
src/HandleGeneric v2/src/platform/2_domain/: errors.py  policies.py
src/HandleGeneric v2/src/platform/2_domain/models/: generation.py  metadata.py  requirements.py  validation.py
src/HandleGeneric v2/src/platform/3_ports/: ai.py  fs.py  observability.py  providers.py  runners.py  vcs.py
src/HandleGeneric v2/src/platform/4_adapters/ai/: openai_client.py
src/HandleGeneric v2/src/platform/4_adapters/fs/: local_fs.py
src/HandleGeneric v2/src/platform/4_adapters/providers/python/: codegen_provider.py  metadata_provider.py  syntax_validator.py
src/HandleGeneric v2/src/platform/4_adapters/runners/: pytest_runner.py
src/HandleGeneric v2/src/platform/5_kernel/: config.py  di.py  logging.py  registry.py
src/HandleGeneric v2/src/platform/6_interfaces/api/: app.py
src/HandleGeneric v2/src/platform/6_interfaces/cli/: main.py
src/HandleGeneric v2/src/platform/adapters/: __init__.py
src/HandleGeneric v2/src/platform/adapters/ai/: __init__.py  openai_client.py
src/HandleGeneric v2/src/platform/adapters/fs/: __init__.py  artifact_writer.py  local_fs.py
src/HandleGeneric v2/src/platform/adapters/providers/python/: codegen_provider.py  metadata_provider.py  syntax_validator.py
src/HandleGeneric v2/src/platform/adapters/runners/: pytest_runner.py  sandbox_subprocess.py
src/HandleGeneric v2/src/platform/app/: __init__.py
src/HandleGeneric v2/src/platform/app/s1_codegen/: __init__.py  use_cases.py
src/HandleGeneric v2/src/platform/app/s2_metadata/: use_cases.py
src/HandleGeneric v2/src/platform/app/s3_validation/: __init__.py  use_cases.py
src/HandleGeneric v2/src/platform/domain/: __init__.py  errors.py  policies.py
src/HandleGeneric v2/src/platform/domain/models/: __init__.py  generation.py  metadata.py  requirements.py  validation.py
src/HandleGeneric v2/src/platform/interfaces/: __init__.py
src/HandleGeneric v2/src/platform/interfaces/cli/: __init__.py  main.py
src/HandleGeneric v2/src/platform/kernel/: __init__.py  config.py  di.py  logging.py  registry.py
src/HandleGeneric v2/src/platform/ports/: __init__.py  ai.py  fs.py  observability.py  providers.py  runners.py  vcs.py
src/HandleGeneric v2/src/platform/temp directory for moving code/: README.md  client.py  cold_run.py  cold_run_config.py  requirements.txt  test_ai.py
src/HandleGeneric v2/tests/unit/: test_s2_metadata_provider_python.py
tests/: README.md  pytest.ini  requirements.txt  run_tests.py  test_ai_code_editor.py  test_code_analyzer.py  test_code_validator.py  test_config.py  test_function_app.py  test_metadata_manager.py  test_requirements_checker.py
(+260 files in other folders)
