[tool.poetry]
name = "platform"
version = "0.1.0"
description = "Enterprise-grade code generation platform with three first-class services"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "platform", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
typer = {extras = ["all"], version = "^0.9.0"}
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
structlog = "^23.2.0"
jinja2 = "^3.1.0"
openai = "^1.3.0"
aiofiles = "^23.2.0"
httpx = "^0.25.0"
pydantic-settings = "^2.1.0"
black = "^23.12.0"
isort = "^5.13.0"
pytest = "^7.4.0"
rich = "^13.7.0"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
ruff = "^0.1.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
handle = "platform.interfaces.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "ICN", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PLE", "PLR", "PLW", "TRY", "NPY", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 