[project]
name = "handle-platform"
version = "0.1.0"
description = "S1/S2/S3 platform (codegen, metadata, validation)"
authors = [{name="Your Name", email="you@example.com"}]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12.3",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "rich>=13.7",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "black>=24.4", "isort>=5.13", "mypy>=1.10"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
